fix: fixing search feature
